Fixing the coupling of the emails, as in #16

--- a/BBS.Libraries.ConsoleAppTests.Emails/Views/HandleBars/01_Mhtml.cshtml
+++ b/BBS.Libraries.ConsoleAppTests.Emails/Views/HandleBars/01_Mhtml.cshtml
@@ -4,6 +4,10 @@
 
 This test was successfully sent at {{DateTime}}.<br/>
 
+{{#each Names}}
+<h1>Hi there!</h1>
+{{/each}}
+
 Thank you,<br />
 
 Betabyte
